<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_default"
        android:background="@color/fondoClaro">

        <TextView
            android:id="@+id/tvTituloPromedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promedio_titulo"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:layout_marginBottom="@dimen/margin_small"/>

        <EditText
            android:id="@+id/etNota1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota1"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_small"/>

        <EditText
            android:id="@+id/etNota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota2"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_small"/>

        <EditText
            android:id="@+id/etNota3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota3"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_small"/>

        <EditText
            android:id="@+id/etNota4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota4"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_small"/>

        <EditText
            android:id="@+id/etNota5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nota5"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/margin_default"/>

        <Button
            android:id="@+id/btnCalcularPromedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular_promedio"
            android:layout_marginBottom="@dimen/margin_default"/>

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="@dimen/margin_small"/>

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_regresar"
            android:layout_marginTop="@dimen/margin_default"/>

    </LinearLayout>
</ScrollView>