<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    android:background="@color/fondoClaro">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_titulo"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <Button
        android:id="@+id/btnEjercicio1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ejercicio1"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/btnEjercicio2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ejercicio2"
        app:layout_constraintTop_toBottomOf="@id/btnEjercicio1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/button_spacing"/>

    <Button
        android:id="@+id/btnEjercicio3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ejercicio3"
        app:layout_constraintTop_toBottomOf="@id/btnEjercicio2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/button_spacing"/>

</androidx.constraintlayout.widget.ConstraintLayout>